--- a/node/src/views/clients/patirals/header.pug
+++ b/node/src/views/clients/patirals/header.pug
@@ -187,7 +187,7 @@ header.header
             )
               .user-avatar.me-2
                 i.fas.fa-user-circle.fs-5
-              span.nav-text Tài khoản
+              span.nav-text #{users.fullName}
               i.fas.fa-chevron-down.ms-1.small
 
             ul.dropdown-menu.dropdown-menu-end.shadow-lg.border-0.rounded-3.mt-2(
