--- a/node/src/views/clients/patirals/header.pug
+++ b/node/src/views/clients/patirals/header.pug
@@ -175,6 +175,7 @@ header.header
                   )
                     | #{totalQuantity > 99 ? '99+' : totalQuantity}
               span.nav-text.ms-2.d-none.d-lg-inline Giỏ hàng
+              
 
           //- User Account Dropdown
           li.nav-item.dropdown
@@ -187,7 +188,7 @@ header.header
             )
               .user-avatar.me-2
                 i.fas.fa-user-circle.fs-5
-              span.nav-text #{users.fullName}
+              span.nav-text Tài khoản
               i.fas.fa-chevron-down.ms-1.small
 
             ul.dropdown-menu.dropdown-menu-end.shadow-lg.border-0.rounded-3.mt-2(
