--- a/node/src/views/admin/patirals/header.pug
+++ b/node/src/views/admin/patirals/header.pug
@@ -9,7 +9,7 @@ header.header
       #navbarNav.collapse.navbar-collapse
         ul.navbar-nav.ms-auto.mb-2.mb-lg-0.gap-2
           li.nav-item
-            a.nav-link.active.text-white.fw-semibold.px-3.rounded(href="/admin/dashboard" aria-current="page") Tổng quan
+            a.nav-link.active.text-white.fw-semibold.px-3.rounded(href=`${prefixAdmin}/dashboard` aria-current="page") Tổng quan
           li.nav-item
             a.nav-link.text-white.fw-semibold.px-3.rounded(href="/products") Sản phẩm
           //- Đăng xuất - nên dùng nav-link thay vì btn btn-danger để đồng nhất style
